fix List word wrap

--- a/src/ui/components/List/List.less
+++ b/src/ui/components/List/List.less
@@ -16,6 +16,11 @@
       display: table-cell;
     }
 
+    .List__item__value {
+      word-break: break-word;
+      display: flex;
+    }
+
     .List__item__label {
       text-align: right;
       color: var(--uikit-foreground-secondary);
